# gnss-sdr-osnma

./: .gitattributes  README.md
captures/: from_file_hackrf_galileo_E1_osnma.conf
conf/osnma_keys/: OSNMA_PublicKey_20210920133026.xml
src/algorithms/: CMakeLists.txt
src/algorithms/security/: CMakeLists.txt
src/algorithms/security/gnuradio_blocks/: CMakeLists.txt  galileo_osnma_worker.cc  galileo_osnma_worker.h
src/algorithms/security/libs/: CMakeLists.txt
src/algorithms/security/libs/osnma/: CMakeLists.txt  osnma_dsm_message.h  osnma_processor.cc  osnma_processor.h  osnma_subframe.cc  osnma_subframe.h  utils.cc  utils.h
src/algorithms/telemetry_decoder/gnuradio_blocks/: galileo_telemetry_decoder_gs.cc  galileo_telemetry_decoder_gs.h
src/algorithms/telemetry_decoder/libs/: tlm_conf.cc  tlm_conf.h
src/core/receiver/: CMakeLists.txt  gnss_flowgraph.cc  gnss_flowgraph.h
src/core/system_parameters/: CMakeLists.txt  galileo_inav_message.cc  galileo_inav_message.h  galileo_osnma.h
